--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ img {
 .sub-menu.sub-hover {
 	display:		none;
 }
-.main-item:hover .sub-menu.sub-hover {
+.main-item:hover .sub-menu.sub-hover,
+.main-item:focus .sub-menu.sub-hover {
 	display:		block;
 }
 .main-menu .catalog-current {
@@ -192,10 +193,9 @@ a.sub-new::after {
 .sub-menu-current {
 	background-color:	#d07058;
 }
-#link-current {
-	color:				white;	/* на классах работает только когда их три.. пришлось  id */
-}
-
+.sub-menu a.link-current {
+	color:				white;
+}	
 .user-block {
 	display:			-webkit-box;
 	display:			-ms-flexbox;
@@ -215,10 +215,10 @@ a.sub-new::after {
 	display:			flex;
 }
 .user-data .popup-search {
-	display:			none;	/* убрал visually-hidden */
+	display:			none;
 	position:			absolute;
 	top: 				59px;
-	right: 				252px;
+	right: 				220px;
 	width: 				341px;
 	height:				84px;
 	border-radius:		5px;
@@ -227,7 +227,10 @@ a.sub-new::after {
 	-webkit-box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
 	        box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
 }
-.search-site:hover .popup-search {
+.search-site:hover + .popup-search,
+.search-site:focus + .popup-search,
+.login:hover + .popup-login-form,
+.login:focus + .popup-login-form {
 	display:		block;	 /* не работает, ну и вопросы я оставил внизу этого файла (style.css).  display:none VS visually-hidden */
 }
 
@@ -240,12 +243,13 @@ a.sub-new::after {
 	padding-left:		15px;
 }
 .popup-login-form {
+	display:			none;
 	position:			absolute;
 	background-color:	#f8f7f4;
 	-webkit-box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
 	        box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
 	top: 				59px;
-	right: 				149px;
+	right: 				118px;
 	width: 				277px;
 	height: 			214px;
 	padding: 			20px 18px;
@@ -365,7 +369,7 @@ a.sub-new::after {
 	display:		none;
 	position:		absolute;
 	padding-top:	12px;
-	right:			39px;
+	right:			9px;
 	z-index:		10;
 }
 .basket-container {
@@ -476,8 +480,8 @@ a.sub-new::after {
 	padding-top:			10px;
 }
 
-.user-basket-red:hover .popup-basket,
-.user-basket-red:focus .popup-basket {
+.user-basket-red:hover + .popup-basket,
+.user-basket-red:focus + .popup-basket {
 	display:			block;				/* не работает  =(  */
 }
 
@@ -543,16 +547,18 @@ a.sub-new::after {
 	width:			700px;
 	margin:			71px auto 27px;
 	font-size:		60px;
-	line-height:	60px;
-	font-weight:	800;
+	line-height:	1.005;
+	font-weight:	700;
 }
 .button-slider {
+	position:			relative;
+	top:				3px;
 	display:			inline-block;
-	padding:			12px 44px;
-	margin-bottom:		22px;
-	font-weight:		600;
-	font-size:			31px;
-	line-height:		41px;
+	padding:			14px 41px;
+	margin-bottom:		24px;
+	font-size:			32px;
+	font-weight:		700;
+	line-height:		1,375;
 	text-align:			center;
 	color:				#ffffff;
 	vertical-align:		top;
@@ -576,6 +582,7 @@ a.sub-new::after {
 .price-button:hover,
 .subscribe button:hover,
 .modal-feedback input[type="submit"]:hover,
+.contacts-button:hover,
 .basket-button:hover {
 	background:			-webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
 	background:			-webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
@@ -591,6 +598,7 @@ a.sub-new::after {
 .price-button:active,
 .subscribe button:active,
 .modal-feedback input[type="submit"]:focus,
+.contacts-button:focus,
 .basket-button:focus {
 	background: 		-webkit-gradient(linear, left top, left bottom, from(#d84732), to(#e1613e));
 	background: 		-webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
@@ -972,11 +980,11 @@ a.sub-new::after {
 	border-radius:		15px;
 }
 .sel-raspberry {
-	background: 		#000 url("../img/raspberries_free.png");
+	background: 		#b60329 url("../img/raspberries_free.png");
 	position:			relative;
 }
 .sel-chocolate {
-	background: 		#000 url("../img/chocolate_free.png");
+	background: 		#5e361f url("../img/chocolate_free.png");
 	position:			relative;
 }
 .sel-raspberry p:first-child,
@@ -1108,6 +1116,7 @@ a.sub-new::after {
 .features-block	{
 	padding-top:		25px;
 	padding-left:		20px;
+	margin-top:			-10px;
 	margin-bottom:		40px;
 	width:				1146px;
 	min-height:			306px;
@@ -1142,15 +1151,15 @@ a.sub-new::after {
 	position:			relative;
 	width: 				49%;
 	padding-left:		55px;
-	padding-top:		20px;
+	padding-top:		22px;
 }
 .features-list li:last-child {
 	padding-bottom:		0;
 }
 
 .features-list li::before {
-	top:			 		9px;
-	left:					1px;
+	top:			 		8px;
+	left:					0px;
 	width:					49px;
 	height: 				49px;
 }
@@ -1165,6 +1174,12 @@ a.sub-new::after {
 }
 .features-list li:nth-child(4):before {
 	background: 			url("../img/thermometer.svg") no-repeat;
+}
+.features-list li:nth-child(2n) {
+	padding-left:		63px;
+}
+.features-list li:nth-child(2n)::before {
+	left:					5px;
 }
 .user-blog {
 	display:			-webkit-box;
@@ -1253,7 +1268,8 @@ a.sub-new::after {
 	border-radius:		23px;
 }
 .map {
-    width: 				100%;
+	position:			relative;
+    min-width: 			1200px;
     height: 			430px;
 	background-color: 	#ebe5cc;
     background-image: 	url("../img/map.jpg");
@@ -1262,6 +1278,7 @@ a.sub-new::after {
 	margin-bottom:		10px;
 }
 .modal-feedback {
+	display:			none;
 	position:			fixed;
 	top:				337px;
 	left:				388px;
@@ -1343,6 +1360,57 @@ a.sub-new::after {
 	        transform: 			rotate(-45deg);
 }
 
+
+/*  ------------------  */
+.map-contacts {
+    position: absolute;
+    right: 101px;
+    top: 62px;
+    width: 302px;
+    min-height: 305px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding-top: 30px;
+    padding-left: 25px;
+    font-size: 14px;
+    line-height: 1.428;
+    color: #323232;
+    background-color: #fff;
+    /* background-image: url(../img/bg-contacts.png); */
+    /* background-position: 0 0; */
+	/*     background-repeat: repeat; */
+    border-radius: 15px;
+}
+
+
+.map-contacts p {
+    margin: 0;
+    margin-bottom: 16px;
+}
+.map-contacts b {
+    display: block;
+    padding-top: 4px;
+    padding-bottom: 2px;
+    font-size: 18px;
+    line-height: 1.333;
+    font-weight: 700;
+}
+.contacts-button {
+    position: absolute;
+    bottom: 32px;
+    padding: 10px 28px;
+/*     padding-right: 28px; */
+	border-radius: 23px;
+	color: #fefefe;
+	font-size: 18px;
+	line-height: 1.333;
+	font-weight: 700;
+}
+
+
+
+
+
 .pagination-list {
 	position:			relative;
 	display:			-webkit-box;
@@ -1421,7 +1489,7 @@ a.sub-new::after {
 	border-right:		1px solid #ffffff;
 }
 
-footer {
+.main-footer {
 	display:			-webkit-box;
 	display:			-ms-flexbox;
 	display:			flex;
